--- a/contact-us.html
+++ b/contact-us.html
@@ -139,6 +139,7 @@
 	    		<div class="col-sm-12">    			   			
 					<h2 class="title text-center">Contact <strong>Us</strong></h2>    			    				    				
 					<div id="gmap" class="contact-map">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3984.399143510591!2d101.79057135036295!3d2.9865988978142197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cdcb841d3762c7%3A0x4dc97330d731c530!2z5paw57qq5YWD5aSn5a2m5a2m6Zmi!5e0!3m2!1szh-CN!2smy!4v1628234745763!5m2!1szh-CN!2smy" width="1100" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 					</div>
 				</div>			 		
 			</div>    	
@@ -170,30 +171,14 @@
 	    			<div class="contact-info">
 	    				<h2 class="title text-center">Contact Info</h2>
 	    				<address>
-	    					<p>E-Shopper Inc.</p>
-							<p>935 W. Webster Ave New Streets Chicago, IL 60614, NY</p>
-							<p>Newyork USA</p>
-							<p>Mobile: +2346 17 38 93</p>
-							<p>Fax: 1-714-252-0026</p>
+	    					<p>Itamiyokanjiro Inc.</p>
+							<p>12, Jalan Bagistan ,Taman Samseng</p>
+							<p>Selangor Malaysia</p>
+							<p>Mobile: +019 23456789</p>
+							<p>Fax: +03 2341 5578</p>
 							<p>Email: info@e-shopper.com</p>
 	    				</address>
-	    				<div class="social-networks">
-	    					<h2 class="title text-center">Social Networking</h2>
-							<ul>
-								<li>
-									<a href="#"><i class="fa fa-facebook"></i></a>
-								</li>
-								<li>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</li>
-								<li>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-								</li>
-								<li>
-									<a href="#"><i class="fa fa-youtube"></i></a>
-								</li>
-							</ul>
-	    				</div>
+	    			
 	    			</div>
     			</div>    			
 	    	</div>  
@@ -209,7 +194,7 @@
 						<div class="single-widget">
 							<h2>Service</h2>
 							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">Contact Us</a></li>
+								<li><a href="contact-us.html">Contact Us</a></li>
 								<li><a href="#">Order Status</a></li>
 								<li><a href="#">FAQ’s</a></li>
 							</ul>
