--- a/cart.html
+++ b/cart.html
@@ -6,14 +6,14 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 		<title>Home | E-Shopper</title>
-		<link href="bootstrap.min.css" rel="stylesheet">
-		<link href="font-awesome.min.css" rel="stylesheet">
-		<link href="prettyPhoto.css" rel="stylesheet">
-		<link href="price-range.css" rel="stylesheet">
-		<link href="animate.css" rel="stylesheet">
-		<link href="main.css" rel="stylesheet">
-		<link href="responsive.css" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/font-awesome.min.css" rel="stylesheet">
+		<link href="css/prettyPhoto.css" rel="stylesheet">
+		<link href="css/price-range.css" rel="stylesheet">
+		<link href="css/animate.css" rel="stylesheet">
+		<link href="css/main.css" rel="stylesheet">
+		<link href="css/responsive.css" rel="stylesheet">
+		<link rel="css/stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!--[if lt IE 9]>
 		<script src="js/html5shiv.js"></script>
