--- a/contact-us.html
+++ b/contact-us.html
@@ -212,8 +212,8 @@
 						<div class="single-widget">
 							<h2>Policies</h2>
 							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">Terms of Use</a></li>
-								<li><a href="#">Privecy Policy</a></li>
+								<li><a href="terms of use.html">Terms of Use</a></li>
+								<li><a href="privecy policy.html">Privecy Policy</a></li>
 							</ul>
 						</div>
 					</div>		
@@ -226,23 +226,24 @@
 			<div class="container">
 				<div class="row">
 					<p class="pull-left">Copyright © 2021 AD-Web G1. All rights reserved.</p>
-					<p class="pull-right">Designed by <span>2 of G1 members</span></p>
+					<p class="pull-right">Designed by <span>Prodigal Eye</span></p>
 				</div>
 			</div>
 		</div>
 		
 	</footer><!--/Footer-->
 	
-
-  
-    <script src="js/jquery.js"></script>
+	
+	
+	
+	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-    <script type="text/javascript" src="js/gmaps.js"></script>
+	<script type="text/javascript" src="js/gmaps.js"></script>
 	<script src="js/contact.js"></script>
 	<script src="js/price-range.js"></script>
-    <script src="js/jquery.scrollUp.min.js"></script>
-    <script src="js/jquery.prettyPhoto.js"></script>
-    <script src="js/main.js"></script>
-</body>
-</html>
+	<script src="js/jquery.scrollUp.min.js"></script>
+	<script src="js/jquery.prettyPhoto.js"></script>
+	<script src="js/main.js"></script>
+	</body>
+	</html>
