--- a/login.html
+++ b/login.html
@@ -186,9 +186,7 @@
 						<div class="single-widget">
 							<h2>Service</h2>
 							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">Contact Us</a></li>
-								<li><a href="#">Order Status</a></li>
-								<li><a href="#">FAQ’s</a></li>
+								<li><a href="contact-us.html">Contact Us</a></li>
 							</ul>
 						</div>
 					</div>
