--- a/login.html
+++ b/login.html
@@ -194,12 +194,22 @@
 						<div class="single-widget">
 							<h2>Policies</h2>
 							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">Terms of Use</a></li>
-								<li><a href="#">Privecy Policy</a></li>
+								<li><a href="terms of use.html">Terms of Use</a></li>
+								<li><a href="privecy policy.html">Privecy Policy</a></li>
 							</ul>
 						</div>
 					</div>		
 					
+					<div class="col-sm-2">
+						<div class="single-widget">
+							<h2>JQuery Checking </h2>
+							<ul class="nav nav-pills nav-stacked">
+								<li><a href="privecy policy.html">Privecy Policy</a></li>
+								<li><a href="index.html">Index</a></li>
+								<li><a href="shop.html">Shop</a></li>
+							</ul>
+						</div>
+					</div>		
 				</div>
 			</div>
 		</div>
