--- a/privecy policy.html
+++ b/privecy policy.html
@@ -32,10 +32,10 @@
 
 <body>
     <ul id="menu">
-        <li data-menuanchor="first"><a href="#first">First slide</a></li>
-        <li data-menuanchor="second"><a href="#second">Second slide</a></li>
-        <li data-menuanchor="third"><a href="#third">Third slide</a></li>
-        <li data-menuanchor="index"><a href="index.html">Back To Index</a></li>
+        <li data-menuanchor="first"><a href="#first">Privacy 1</a></li>
+        <li data-menuanchor="second"><a href="#second">Privacy 2</a></li>
+        <li data-menuanchor="third"><a href="#third">Privacy 3</a></li>
+        <li data-menuanchor="index"><a href="index.html">Home</a></li>
     </ul>
 
     
