--- a/blog.html
+++ b/blog.html
@@ -375,8 +375,6 @@
 							<h2>Service</h2>
 							<ul class="nav nav-pills nav-stacked">
 								<li><a href="contact-us.html">Contact Us</a></li>
-								<li><a href="#">Order Status</a></li>
-								<li><a href="#">FAQ’s</a></li>
 							</ul>
 						</div>
 					</div>
@@ -390,6 +388,16 @@
 						</div>
 					</div>		
 					
+					<div class="col-sm-2">
+						<div class="single-widget">
+							<h2>JQuery Checking </h2>
+							<ul class="nav nav-pills nav-stacked">
+								<li><a href="privecy policy.html">Privecy Policy</a></li>
+								<li><a href="index.html">Index</a></li>
+								<li><a href="shop.html">Shop</a></li>
+							</ul>
+						</div>
+					</div>		
 				</div>
 			</div>
 		</div>
@@ -398,7 +406,7 @@
 			<div class="container">
 				<div class="row">
 					<p class="pull-left">Copyright © 2021 AD-Web G1. All rights reserved.</p>
-					<p class="pull-right">Designed by <span>Prodigal Eye</span></p>
+					<p class="pull-right">Designed by <span>2 of G1 members</span></p>
 				</div>
 			</div>
 		</div>
