--- a/index.html
+++ b/index.html
@@ -113,9 +113,8 @@
 							<div class="item active">
 								<div class="col-sm-6">
 									<h1>ROG Centurion</h1>
-									<h2>Free E-Commerce Template</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-									<button type="button" class="btn btn-default get">Get it now</button>
+									<p>ROG Centurion high-fidelity 7.1 gaming headset uses 10 neodymium magnet drive units high-noise reduction digital microphones realistic 7.1 headset surround sound function and plug-and-play USB sound engine. </p>
+									<a href="product-details5.html" button type="button" class="btn btn-default get">Get it now</button></a>
 								</div>
 								<div class="col-sm-6">
 									<img src="Image/HeadsetOrHeadphone/ROG Centurion/ROG Centurion Main-min.png" class="girl img-responsive" alt="" />
@@ -126,9 +125,8 @@
 							<div class="item">
 								<div class="col-sm-6">
 									<h1>ROG Gladius II Wireless</h1>
-									<h2>100% Responsive Design</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-									<button type="button" class="btn btn-default get">Get it now</button>
+									<p>ROG Gladius II Core lightweight, ergonomic, wired optical gaming mouse with 6200-dpi sensor, ROG-exclusive switch-socket design and Aura Sync lighting. </p>
+									<a href="product-details9.html" button type="button" class="btn btn-default get">Get it now</button></a>
 								</div>
 								<div class="col-sm-6">
 									<img src="Image/Mouse/ROG Gladius II Wireless/ROG Gladius II Wireless Main-min.png" class="girl img-responsive" alt="" />
@@ -139,9 +137,8 @@
 							<div class="item">
 								<div class="col-sm-6">
 									<h1>ROG SWIFT PG279QE</h1>
-									<h2>Free Ecommerce Template</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-									<button type="button" class="btn btn-default get">Get it now</button>
+									<p></p>27 inch WQHD (2560x1440) IPS panel with 165Hz refresh rate (supports 144Hz) full sRGB gamut for immersive life like color in games, movies, and design</p>
+									<a href="product-details4.html" button type="button" class="btn btn-default get">Get it now</button></a>
 								</div>
 								<div class="col-sm-6">
 									<img src="Image/Monitor/ROG SWIFT PG279QE/ROG SWIFT PG279QE monitor4-min.png" class="girl img-responsive" alt="" />
