Last check (maybe)

--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
 						<div class="single-widget">
 							<h2>Service</h2>
 							<ul class="nav nav-pills nav-stacked">
-								<li><a href="contact-us.html">Contact Us</a></li>
+								<li><a href="contact-us.php">Contact Us</a></li>
 							</ul>
 						</div>
 					</div>
@@ -832,7 +832,7 @@
 			<div class="container">
 				<div class="row">
 					<p class="pull-left">Copyright © 2021 AD-Web G1. All rights reserved.</p>
-					<p class="pull-right">Designed by <span>2 of G1 members</span></p>
+					<p class="pull-right">Designed by <span>Prodigal Eye</span></p>
 				</div>
 			</div>
 		</div>
