--- a/shop.html
+++ b/shop.html
@@ -91,7 +91,7 @@
 										<li><a href="product-details.html">Product Details</a></li> 
                                     </ul>
                                 </li> 
-								<li><a href="contact-us.html">Contact</a></li>
+								<li><a href="contact-us.php">Contact</a></li>
 							</ul>
 						</div>
 					</div>
@@ -796,7 +796,7 @@
 						<div class="single-widget">
 							<h2>Service</h2>
 							<ul class="nav nav-pills nav-stacked">
-								<li><a href="contact-us.html">Contact Us</a></li>
+								<li><a href="contact-us.php">Contact Us</a></li>
 							</ul>
 						</div>
 					</div>
@@ -828,7 +828,7 @@
 			<div class="container">
 				<div class="row">
 					<p class="pull-left">Copyright © 2021 AD-Web G1. All rights reserved.</p>
-					<p class="pull-right">Designed by <span>2 of G1 members</span></p>
+					<p class="pull-right">Designed by <span>Prodigal Eye</span></p>
 				</div>
 			</div>
 		</div>
