--- a/terms of use.html
+++ b/terms of use.html
@@ -567,9 +567,7 @@ You hereby waive any and all defenses you may have based on the electronic form 
 						<div class="single-widget">
 							<h2>Service</h2>
 							<ul class="nav nav-pills nav-stacked">
-								<li><a href="contact-us.html">Contact Us</a></li>
-								<li><a href="#">Order Status</a></li>
-								<li><a href="#">FAQ’s</a></li>
+								<li><a href="contact-us.php">Contact Us</a></li>
 							</ul>
 						</div>
 					</div>
@@ -578,11 +576,20 @@ You hereby waive any and all defenses you may have based on the electronic form 
 							<h2>Policies</h2>
 							<ul class="nav nav-pills nav-stacked">
 								<li><a href="terms of use.html">Terms of Use</a></li>
-								<li><a href="#">Privecy Policy</a></li>
+								<li><a href="privecy policy.html">Privecy Policy</a></li>
 							</ul>
 						</div>
 					</div>		
-					
+					<div class="col-sm-2">
+						<div class="single-widget">
+							<h2>JQuery Checking </h2>
+							<ul class="nav nav-pills nav-stacked">
+								<li><a href="privecy policy.html">Privecy Policy</a></li>
+								<li><a href="index.html">Index</a></li>
+								<li><a href="shop.html">Shop</a></li>
+							</ul>
+						</div>
+					</div>	
 				</div>
 			</div>
 		</div>
