--- a/terms of use.html
+++ b/terms of use.html
@@ -68,7 +68,7 @@
 						</div>
 						<div class="mainmenu pull-left">
 							<ul class="nav navbar-nav collapse navbar-collapse">
-								<li><a href="index.html" class="active">Home</a></li>
+								<li><a href="index.html" class="active">Terms</a></li>
 								<li class="dropdown"><a href="#">Shop<i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
                                         <li><a href="shop.html">Products</a></li>
@@ -558,45 +558,53 @@ You hereby waive any and all defenses you may have based on the electronic form 
 
 
 
-    <footer id="footer"><!--Footer-->
+<footer id="footer"><!--Footer-->
 		
-		<div class="footer-widget">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-2">
-						<div class="single-widget">
-							<h2>Service</h2>
-							<ul class="nav nav-pills nav-stacked">
-								<li><a href="contact-us.html">Contact Us</a></li>
-								<li><a href="#">Order Status</a></li>
-								<li><a href="#">FAQ’s</a></li>
-							</ul>
-						</div>
+	<div class="footer-widget">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-2">
+					<div class="single-widget">
+						<h2>Service</h2>
+						<ul class="nav nav-pills nav-stacked">
+							<li><a href="contact-us.php">Contact Us</a></li>
+						</ul>
 					</div>
-					<div class="col-sm-2">
-						<div class="single-widget">
-							<h2>Policies</h2>
-							<ul class="nav nav-pills nav-stacked">
-								<li><a href="terms of use.html">Terms of Use</a></li>
-								<li><a href="#">Privecy Policy</a></li>
-							</ul>
-						</div>
-					</div>		
-					
 				</div>
+				<div class="col-sm-2">
+					<div class="single-widget">
+						<h2>Policies</h2>
+						<ul class="nav nav-pills nav-stacked">
+							<li><a href="terms of use.html">Terms of Use</a></li>
+							<li><a href="privecy policy.html">Privecy Policy</a></li>
+						</ul>
+					</div>
+				</div>		
+				
+				<div class="col-sm-2">
+					<div class="single-widget">
+						<h2>JQuery Checking </h2>
+						<ul class="nav nav-pills nav-stacked">
+							<li><a href="privecy policy.html">Privecy Policy</a></li>
+							<li><a href="index.html">Index</a></li>
+							<li><a href="shop.html">Shop</a></li>
+						</ul>
+					</div>
+				</div>		
 			</div>
 		</div>
-		
-		<div class="footer-bottom">
-			<div class="container">
-				<div class="row">
-					<p class="pull-left">Copyright © 2021 AD-Web G1. All rights reserved.</p>
-					<p class="pull-right">Designed by <span>Prodigal Eye</span></p>
-				</div>
+	</div>
+	
+	<div class="footer-bottom">
+		<div class="container">
+			<div class="row">
+				<p class="pull-left">Copyright © 2021 AD-Web G1. All rights reserved.</p>
+				<p class="pull-right">Designed by <span>Prodigal Eye</span></p>
 			</div>
 		</div>
-		
-	</footer><!--/Footer-->
+	</div>
+	
+</footer><!--/Footer-->
 	
    
 
