--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 								<div class="col-sm-6">
 									<h1>ROG Centurion</h1>
 									<p>ROG Centurion high-fidelity 7.1 gaming headset uses 10 neodymium magnet drive units high-noise reduction digital microphones realistic 7.1 headset surround sound function and plug-and-play USB sound engine. </p>
-									<a href="product-details5.html" button type="button" class="btn btn-default get">Get it now</button></a>
+									<a href="product-details5.html" button type="button" class="btn btn-default get">Get it now</a>
 								</div>
 								<div class="col-sm-6">
 									<img src="Image/HeadsetOrHeadphone/ROG Centurion/ROG Centurion Main-min.png" class="girl img-responsive" alt="" />
@@ -116,7 +116,7 @@
 								<div class="col-sm-6">
 									<h1>ROG Gladius II Wireless</h1>
 									<p>ROG Gladius II Core lightweight, ergonomic, wired optical gaming mouse with 6200-dpi sensor, ROG-exclusive switch-socket design and Aura Sync lighting. </p>
-									<a href="product-details9.html" button type="button" class="btn btn-default get">Get it now</button></a>
+									<a href="product-details9.html" button type="button" class="btn btn-default get">Get it now</a>
 								</div>
 								<div class="col-sm-6">
 									<img src="Image/Mouse/ROG Gladius II Wireless/ROG Gladius II Wireless Main-min.png" class="girl img-responsive" alt="" />
@@ -128,7 +128,7 @@
 								<div class="col-sm-6">
 									<h1>ROG SWIFT PG279QE</h1>
 									<p></p>27 inch WQHD (2560x1440) IPS panel with 165Hz refresh rate (supports 144Hz) full sRGB gamut for immersive life like color in games, movies, and design</p>
-									<a href="product-details4.html" button type="button" class="btn btn-default get">Get it now</button></a>
+									<a href="product-details4.html" button type="button" class="btn btn-default get">Get it now</a>
 								</div>
 								<div class="col-sm-6">
 									<img src="Image/Monitor/ROG SWIFT PG279QE/ROG SWIFT PG279QE monitor4-min.png" class="girl img-responsive" alt="" />
